# romaji2jchars

./: LICENSE  Makefile.am  README.md  autogen  configure.ac  jchars.cc
utils/: gen_characters_lookup.py
